# AutoConGarra

./: platformio.ini  readme.md
Gripper/: index.html  main.js
Gripper/gripper3d/src/: Tresd.js  index.css  index.js
Gripper/gripper_wasm/: Cargo.toml  index.html
Gripper/gripper_wasm/src/: app.rs  lib.rs  main.rs
gripper3d/: package.json
gripper3d/public/models/: example.stl
gripper3d/src/: App.js
gripper_wasm/assets/: sw.js
gripper_wasm/src/: tresd.rs
src/: main.cpp  pines.h  receptor.cpp
webpage/: index.html  main.js  style.css
